adding cloud logging in cloud build.yaml

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,6 +25,9 @@ steps:
 images:
   - '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_REPOSITORY}/${_IMAGE_NAME}:${SHORT_SHA}'
 
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 substitutions:
   _REGION: us-central1
   _REPOSITORY: ai-agent-repo
